# lambopkg

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  autopromote.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  recipes.csv  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: autopkg.yml  autopromote.yml  lint-recipes.yml  lint-workflows.yml  main.yml  update-trust.yml  validate-codecov-config.yml
AutoPkg/: recipe_list.json
AutoPkg/Overrides/: 1Password.munki.recipe.yaml  AdobeAcrobatProXUpdate.munki.recipe.yaml  AdobeCreativeCloudInstallerUniversal.munki.recipe.yaml  AmazonCorrettoJDK.munki.recipe.yaml  Audacity.munki.recipe.yaml  AudinateDanteController.download.recipe.yaml  Beyond Compare 5.munki.recipe.yaml  Bitwarden.munki.recipe.yaml  Blackmagic Desktop Video.munki.recipe.yaml  Blender.download.recipe.yaml  Blender.munki.recipe.yaml  Bomgar Jump Client.download.recipe.yaml  Camtasia.munki.recipe.yaml  CiscoJabber.munki.recipe.yaml  CiscoWebexAudioDriver.munki.recipe.yaml  CitrixWorkspace.munki.recipe.yaml  ClickShare.munki.recipe.yaml  DBeaver Community Edition.munki.recipe.yaml  Dedoose.download.recipe.yaml  DellDisplayAndPeripheralManager.download.recipe.yaml  DockerDesktop.munki.recipe.yaml  DotNetSDK.munki.recipe.yaml  Dropbox.munki.recipe.yaml  Elgato Camera Hub.munki.recipe.yaml  Elgato Stream Deck.munki.recipe.yaml  EndNote2025.download.recipe.yaml  GIMP.munki.recipe.yaml  Garmin Express.munki.recipe.yaml  GlobalProtectMac.munki.recipe.yaml  GoTo.munki.recipe.yaml  GoToMeeting.munki.recipe.yaml  GoogleChrome.munki.recipe.yaml  IntelliJ-IDEA-CE.munki.recipe.yaml  MendeleyReferenceManager.munki.recipe.yaml  Mersive Solstice.download.recipe.yaml  Meta Quest Remote Desktop.munki.recipe.yaml  Microsoft Azure Storage Explorer.munki.recipe.yaml  Microsoft Defender.munki.recipe.yaml  MicrosoftEdge.munki.recipe.yaml  MicrosoftWindowsApp.munki.recipe.yaml  (+28 more)
AutoPkg/Vendorer/: Anthropic-almenscorner.vendorer.recipe.yaml  AutopkgVendorer.py  Claude-dataJAR.vendorer.recipe.yaml  Discord-joshua-d-miller.vendorer.recipe.yaml  Docker-homebysix.vendorer.recipe.yaml  ElliotJordan-homebysix.vendorer.recipe.yaml  Fleet-jc0b.vendorer.recipe.yaml  Fleet-kevinmcox.vendorer.recipe.yaml  GitHub-homebysix.vendorer.recipe.yaml  GoogleChrome-autopkg.vendorer.recipe.yaml  GoogleChrome-recipes.vendorer.recipe.yaml  GoogleDrive-nstrauss.vendorer.recipe.yaml  Google_Drive-apizz.vendorer.recipe.yaml  (+36 more)
autopromote/: index.html
docs/: index.md  modules.md
lambopkg/tools/: run.py  (+3 more)
modules/: index.html
scripts/: __init__.py  autopkg_tools.py  autopromote.py  update_trust_info.py
search/: search_index.json
tests/: test_foo.py
tools/: orchestrate.py  recipes.csv
(+289 files in other folders)
